--- a/data/contact.yaml
+++ b/data/contact.yaml
@@ -1,4 +1,4 @@
-email: 'zerostaticthemes@gmail.com'
-phone: 'XXXX XXX XXX'
-businessName: 'Hugo Serif'
-address: ''
+email: 'saa108@pm.me'
+phone: '867-688-9914'
+businessName: 'Shawn Anderson'
+address: '224 Seven Oaks Pl. Nanaimo BC'
